--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -19,7 +19,7 @@ body:
   - type: input
     id: scenario
     attributes:
-      label: KillerKoda Scenario
+      label: Killercoda Scenario
       description: Is a specific scenario causing the bug?
       placeholder: ex. opentofu-01
     validations:
