--- a/playgrounds/gitops/assets/serviceaccount.yaml
+++ b/playgrounds/gitops/assets/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gitops-sa
+  name: admin-sa
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
