--- a/solutions/capsule-argo-addon/assets/distro/argo.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/argo.flux.yaml
@@ -5,7 +5,7 @@ metadata:
   name:  argo
 spec:
   interval: 5m0s
-  url: https://projectcapsule.github.io/charts
+  url: https://argoproj.github.io/argo-helm
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
@@ -17,8 +17,8 @@ spec:
   releaseName: "argocd"
   chart:
     spec:
-      chart: argo
-      version: "0.7.0-rc.1"
+      chart: argo-cd
+      version: "7.6.12"
       sourceRef:
         kind: HelmRepository
         name: argo
