feat: fix showcase scenariop

--- a/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
@@ -28,6 +28,8 @@ spec:
   upgrade:
     remediation:
       remediateLastFailure: true
+  dependsOn:
+    - name: cert-manager
   driftDetection:
     mode: enabled
     ignore:
