feat: fix showcase scenariop

--- a/solutions/capsule-argo-addon/assets/distro/cert-manager.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/cert-manager.flux.yaml
@@ -27,7 +27,7 @@ spec:
         name: jetstack
       interval: 24h
   install:
-    createNamespace: false
+    createNamespace: true
   upgrade:
     remediation:
       remediateLastFailure: true
