feat: fix showcase scenario

--- a/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
@@ -14,7 +14,7 @@ kind: HelmRelease
 metadata:
   name: capsule-argo-addon
 spec:
-  interval: 5m
+  interval: 30s
   releaseName: "capsule-argo-addon"
   targetNamespace: "capsule-argo-addon"
   chart:
