feat: fix showcase scenario

--- a/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v2
 kind: HelmRepository
 metadata:
   name: peak-scale
@@ -9,7 +9,7 @@ spec:
   interval: 24h0m0s
   url: oci://ghcr.io/peak-scale/charts/
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: capsule-argo-addon
