feat: endless retries

--- a/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/addon.flux.yaml
@@ -30,6 +30,7 @@ spec:
   upgrade:
     remediation:
       remediateLastFailure: true
+      retries: -1      
   dependsOn:
     - name: capsule
     - name: argocd
