--- a/solutions/capsule-argo-addon/assets/distro/argo.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/argo.flux.yaml
@@ -25,6 +25,8 @@ spec:
       interval: 24h
   install:
     createNamespace: true
+    remediation:
+      retries: -1
   upgrade:
     remediation:
       remediateLastFailure: true
