--- a/solutions/capsule-argo-addon/assets/objects/translators/default-onboarding.yaml
+++ b/solutions/capsule-argo-addon/assets/objects/translators/default-onboarding.yaml
@@ -44,8 +44,8 @@ spec:
     clusterRoles:
       - "tenant-viewer"
     policies:
-    - resource: "applications"
-      action: ["*"]
+    - resource: "*"
+      action: ["get"]
   - name: "owner"
     # Selects entities which are mapped to the clusterRole "admin
     clusterRoles:
