feat: update description

--- a/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
@@ -48,4 +48,6 @@ spec:
       create: true
     manager:
       options:
+        userGroups:
+        - "system:serviceaccounts:capsule-argo-addon"
         forceTenantPrefix: false
