fix: align with e2e environment

--- a/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
+++ b/solutions/capsule-argo-addon/assets/distro/capsule.flux.yaml
@@ -31,23 +31,17 @@ spec:
     remediation:
       remediateLastFailure: true
   driftDetection:
-    mode: enabled
-    ignore:
-    - paths: ["/spec/userGroups"]
-      target:
-        group: capsule.clastix.io
-        kind: CapsuleConfiguration
-        name: default
+    mode: disabled
   values:
     crds:
       install: true
     tls:
       # -- Start the true controller that injects the CA into mutating and validating webhooks, and CRD as well.
-      enableController: true
+      enableController: false
       # -- When cert-manager is disabled, Capsule will generate the TLS certificate for webhook and CRDs conversion.
-      create: true
+      create: false
     manager:
       options:
-        userGroups:
+        capsuleUserGroups:
         - "system:serviceaccounts:capsule-argo-addon"
         forceTenantPrefix: false
