chore: add ignoreunstable for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
   "mode": "full",
   "commitMessageLowerCase": "auto",
   "semanticCommits": "enabled",
+  "ignoreUnstable": false,
   "argocd": {
     "fileMatch": ["^.*argo\\.yaml$"]
   },
