--- a/common/repos/metrics-server.yaml
+++ b/common/repos/metrics-server.yaml
@@ -4,5 +4,6 @@ kind: HelmRepository
 metadata:
   name: metrics-server
 spec:
-  interval: 24h0m0s
+  interval: 1m0s
+  timeout: 1m0s
   url: https://kubernetes-sigs.github.io/metrics-server/
