--- a/solutions/multi-tenant-flux/assets/distro/capsule.flux.yaml
+++ b/solutions/multi-tenant-flux/assets/distro/capsule.flux.yaml
@@ -1,12 +1,44 @@
----
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
+kind: HelmRelease
 metadata:
-  name:  projectcapsule
-  namespace: flux-system
+  name: capsule-proxy
 spec:
-  interval: 5m0s
-  url: https://projectcapsule.github.io/charts
+  interval: 10m
+  dependsOn:
+    - name: capsule
+  targetNamespace: capsule-system
+  releaseName: "capsule-proxy"
+  chart:
+    spec:
+      chart: capsule-proxy
+      version: "0.9.0"
+      sourceRef:
+        kind: HelmRepository
+        name: projectcapsule
+      interval: 24h
+  install:
+    createNamespace: true
+    remediation:
+      retries: -1
+  upgrade:
+    remediation:
+      remediateLastFailure: true
+  driftDetection:
+    mode: enabled
+  values:
+    service:
+      type: ClusterIP
+    resources: {}
+    options:
+      logLevel: 10
+      enableSSL: true
+      generateCertificates: false
+      authPreferredTypes: "BearerToken"
+      extraArgs:
+      - "--feature-gates=ProxyClusterScoped=false"
+      - "--feature-gates=ProxyAllNamespaced=true"
+      clientConnectionQPS: 50
+      clientConnectionBurst: 100
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -44,6 +76,4 @@ spec:
       create: true
     manager:
       options:
-        capsuleUserGroups:
-        - "system:serviceaccounts:capsule-argo-addon"
         forceTenantPrefix: false
