--- a/solutions/multi-tenant-flux/assets/distro/capsule.flux.yaml
+++ b/solutions/multi-tenant-flux/assets/distro/capsule.flux.yaml
@@ -1,3 +1,14 @@
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name:  projectcapsule
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  timeout: 1m0s
+  url: https://projectcapsule.github.io/charts
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
