--- a/solutions/multi-tenant-flux/assets/distro/headlamp.flux.yaml
+++ b/solutions/multi-tenant-flux/assets/distro/headlamp.flux.yaml
@@ -1,4 +1,14 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: headlamp
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  timeout: 1m0s
+  url: https://headlamp-k8s.github.io/headlamp/
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
