feat: retry demno realm

--- a/solutions/multi-tenant-argo/assets/distro/addon.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/addon.flux.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: peak-scale
+  namespace: flux-system
+spec:
+  type: "oci"
+  interval: 1m0s
+  timeout: 1m0s
+  url: oci://ghcr.io/peak-scale/charts/
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
