--- a/solutions/multi-tenant-argo/example/flux/nginx.flux.yaml
+++ b/solutions/multi-tenant-argo/example/flux/nginx.flux.yaml
@@ -2,22 +2,17 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name:  projectcapsule
-  namespace: flux-system
+  name:  bitnami
 spec:
-  interval: 1m0s
-  timeout: 1m0s
-  url: https://projectcapsule.github.io/charts
+  interval: 10m0s
+  url: https://charts.bitnami.com/bitnami
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: capsule
-  namespace: flux-system
+  name: nginx
 spec:
   interval: 30s
-  targetNamespace: capsule-system
-  releaseName: "capsule"
   chart:
     spec:
       chart: capsule
