feat: bump addon version

--- a/solutions/multi-tenant-argo/assets/distro/capsule.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/capsule.flux.yaml
@@ -15,6 +15,7 @@ metadata:
   name: capsule
   namespace: flux-system
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   targetNamespace: capsule-system
   releaseName: "capsule"
