--- a/solutions/multi-tenant-argo/assets/distro/addon.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/addon.flux.yaml
@@ -15,6 +15,7 @@ kind: HelmRelease
 metadata:
   name: capsule-argo-addon
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   releaseName: "capsule-argo-addon"
   targetNamespace: "capsule-argo-addon"
