--- a/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
@@ -13,6 +13,7 @@ kind: HelmRelease
 metadata:
   name: argocd
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   targetNamespace: argocd
   releaseName: "argocd"
