feat: expand flux example

--- a/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
@@ -52,6 +52,7 @@ spec:
         accounts.bob: apiKey, login
         accounts.guy: apiKey, login
         users.anonymous.enabled: "false"
+        application.sync.impersonation.enabled: "true"
         resource.customizations.ignoreDifferences.Namespace: |
           jqPathExpressions:
           - '.metadata.labels'
