--- a/solutions/multi-tenant-argo/example/flux/kustomization.yaml
+++ b/solutions/multi-tenant-argo/example/flux/kustomization.yaml
@@ -1,4 +1,8 @@
+# https://fluxcd.io/flux/installation/configuration/multitenancy/
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-wind-sampler
 resources:
-  - nginx
+  - namespace.yaml
+  - nginx.flux.yaml
+  - repository.yaml
