feat: align addon

--- a/solutions/multi-tenant-argo/assets/objects/translators/default-onboarding.yaml
+++ b/solutions/multi-tenant-argo/assets/objects/translators/default-onboarding.yaml
@@ -23,7 +23,7 @@ spec:
     template: |
       spec:
         destinations:
-          - name: "https://kubernetes.default.svc"
+          - server: "https://kubernetes.default.svc"
             namespace: "*"
         sourceNamespaces:
         - {{ $.Config.Argo.Namespace | quote }}
