--- a/solutions/multi-tenant-argo/example/flux/repository.yaml
+++ b/solutions/multi-tenant-argo/example/flux/repository.yaml
@@ -1,7 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name:  bitnami
+  name: podinfo
+  namespace: default
 spec:
-  interval: 10m0s
-  url: https://charts.bitnami.com/bitnami
+  interval: 5m
+  url: https://stefanprodan.github.io/podinfo
