--- a/solutions/multi-tenant-argo/assets/distro/kustomization.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
+  - rbac.yaml
   - addon.flux.yaml
   - argo.flux.yaml
   - capsule.flux.yaml
+  - cert-manager.flux.yaml
