--- a/solutions/multi-tenant-argo/assets/distro/rbac.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/rbac.yaml
@@ -10,7 +10,9 @@ rules:
       - argoproj.io
     resources:
       - applications
+      - applications/status
       - applicationsets
+      - applicationsets/status
     verbs:
       - "*"
 ---
