feat: quality multi tenant argo solution showcase (#21)
* feat: correct docker playground

* feat: correct docker playground

* add playground

* feat: add playground

* feat: add playground

* feat: improve gitops environment

* feat: improve gitops environment

* feat: improve gitops environment

* docs: describe envs

* feat: add capsule-argo-addon and renovate

* feat: fix showcase scenariop

* feat: fix showcase scenariop

* feat: fix showcase scenariop

* feat: fix showcase scenariop

* feat: fix showcase scenario

* feat: fix showcase scenario

* feat: correct make target

* feat: execute for specific helm files

* feat: endless retries

* feat: update description

* fix: align with e2e environment

* fix: align with e2e environment

* feat: improved renovate config

* chore(deps): update helm release capsule to v0.7.2

* chore(deps): update helm release metrics-server to v3.12.2

* chore: add ignoreunstable for renovate

* chore(deps): update helm release argo-cd to v7.7.15

* chore(deps): update helm release argo-cd to v7.7.16

* chore(deps): update helm release argo-cd to v7.7.16

* chore(deps): update helm release metrics-server to v3.12.2

* feat: improve flux

* feat: improve flux

* feat: retry demno realm

* feat: bump addon version

* feat: bump addon version

* feat: example repo

* feat: expand flux example

* feat: remove podinfo resources

* feat: add trivy

* feat: expand flux example

* feat: remove trivy

* feat: align addon

* feat: use podinfo

* feat: use podinfo

* feat: use podinfo

* feat: new addon version

* feat: update argo properties

* feat: updated rbac

* feat: argo corrections

* feat: functional appsets

---------

Co-authored-by: Johann Gyger <johann.gyger@gmail.com>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/solutions/multi-tenant-argo/assets/distro/cert-manager.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/cert-manager.flux.yaml
@@ -2,42 +2,38 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: peak-scale
+  name: cert-manager
   namespace: flux-system
 spec:
-  type: "oci"
   interval: 24h0m0s
-  url: oci://ghcr.io/peak-scale/charts/
+  url: https://charts.jetstack.io
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: capsule-argo-addon
+  name: cert-manager
+  namespace: flux-system
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
-  releaseName: "capsule-argo-addon"
-  targetNamespace: "capsule-argo-addon"
+  releaseName: "cert-manager"
+  targetNamespace: "cert-manager"
   chart:
     spec:
-      chart: capsule-argo-addon
-      version: "0.1.0-alpha.5"
+      chart: cert-manager
+      version: "1.15.3"
       sourceRef:
         kind: HelmRepository
-        name: peak-scale
+        name: cert-manager
       interval: 24h
   install:
     createNamespace: true
   upgrade:
     remediation:
       remediateLastFailure: true
-      retries: -1      
-  dependsOn:
-    - name: capsule
-    - name: argocd
+      retries: -1
   driftDetection:
     mode: enabled
   values:
-    proxy:
+    crds:
       enabled: true
-      crds:
-        install: true
