--- a/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
+++ b/solutions/multi-tenant-argo/assets/distro/argo.flux.yaml
@@ -4,7 +4,8 @@ kind: HelmRepository
 metadata:
   name:  argo
 spec:
-  interval: 5m0s
+  interval: 1m0s
+  timeout: 1m0s
   url: https://argoproj.github.io/argo-helm
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -12,13 +13,14 @@ kind: HelmRelease
 metadata:
   name: argocd
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   targetNamespace: argocd
   releaseName: "argocd"
   chart:
     spec:
       chart: argo-cd
-      version: "7.6.12"
+      version: "7.7.16"
       sourceRef:
         kind: HelmRepository
         name: argo
@@ -40,16 +42,23 @@ spec:
         nodePortHttp: 30080
         type: "NodePort"
     configs:
+      params:
+        "applicationsetcontroller.allowed.scm.providers": "https://github.com/,https://gitlab.com/"
+        "application.namespaces": "*"
+        "applicationsetcontroller.namespaces": "*"
       rbac:
         policy.csv: |
           # Define Policies
           p, role:anonymous, *, *, */*, deny
         policy.default: "role:anonymous"
       cm:
+        exec.enabled: "true"
         accounts.alice: apiKey, login
         accounts.bob: apiKey, login
         accounts.guy: apiKey, login
         users.anonymous.enabled: "false"
+        application.sync.impersonation.enabled: "true"
+        application.resourceTrackingMethod: "annotation+label"
         resource.customizations.ignoreDifferences.Namespace: |
           jqPathExpressions:
           - '.metadata.labels'
