--- a/solutions/multi-tenant-flux/assets/distro/kustomization.yaml
+++ b/solutions/multi-tenant-flux/assets/distro/kustomization.yaml
@@ -2,7 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - addon.flux.yaml
-  - argo.flux.yaml
+  - headlamp.flux.yaml
   - capsule.flux.yaml
-  - metrics.flux.yaml
