--- a/playgrounds/sealed-secrets/assets/distro/sealed-secrets.flux.yaml
+++ b/playgrounds/sealed-secrets/assets/distro/sealed-secrets.flux.yaml
@@ -2,30 +2,30 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name:  projectcapsule
+  name:  sealed-secrets
   namespace: flux-system
 spec:
   interval: 15s
   timeout: 1m0s
-  url: https://projectcapsule.github.io/charts
+  url: https://bitnami-labs.github.io/sealed-secrets/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: capsule
+  name: sealed-secrets
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
   interval: 15s
-  targetNamespace: capsule-system
-  releaseName: "capsule"
+  targetNamespace: sealed-secrets
+  releaseName: "sealed-secrets"
   chart:
     spec:
-      chart: capsule
-      version: "0.7.2"
+      chart: sealed-secrets
+      version: "2.17.1"
       sourceRef:
         kind: HelmRepository
-        name: projectcapsule
+        name: sealed-secrets
       interval: 24h
   install:
     createNamespace: true
@@ -35,7 +35,7 @@ spec:
     remediation:
       remediateLastFailure: true
   driftDetection:
-    mode: disabled
+    mode: enabled
   values:
     crds:
       install: true
