feat: stabilize sealed-secrets

--- a/playgrounds/sealed-secrets/assets/distro/sealed-secrets-web.flux.yaml
+++ b/playgrounds/sealed-secrets/assets/distro/sealed-secrets-web.flux.yaml
@@ -16,13 +16,13 @@ metadata:
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
-  interval: 15s
+  interval: 1m
   targetNamespace: sealed-secrets-web
-  releaseName: "sealed-secrets"
+  releaseName: "sealed-secrets-web"
   chart:
     spec:
       chart: sealed-secrets-web
-      version: "2.17.1"
+      version: "3.1.5"
       sourceRef:
         kind: HelmRepository
         name: sealed-secrets-web
@@ -50,3 +50,7 @@ spec:
     service:
       port: 80
       type: NodePort
+    deployment:
+      env:
+        sealedSecretsControllerName: sealed-secrets
+        sealedSecretsControllerNamespace: sealed-secrets
