--- a/playgrounds/sealed-secrets/assets/distro/sealed-secrets.flux.yaml
+++ b/playgrounds/sealed-secrets/assets/distro/sealed-secrets.flux.yaml
@@ -16,7 +16,7 @@ metadata:
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
-  interval: 15s
+  interval: 1m
   targetNamespace: sealed-secrets
   releaseName: "sealed-secrets"
   chart:
