feat: improving webui experience

--- a/playgrounds/sealed-secrets/assets/distro/sealed-secrets-web.flux.yaml
+++ b/playgrounds/sealed-secrets/assets/distro/sealed-secrets-web.flux.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   serviceAccountName: kustomize-controller
   interval: 1m
-  targetNamespace: sealed-secrets-web
+  targetNamespace: sealed-secrets
   releaseName: "sealed-secrets-web"
   chart:
     spec:
@@ -35,7 +35,7 @@ spec:
     remediation:
       remediateLastFailure: true
   driftDetection:
-    mode: enabled
+    mode: disabled
   postRenderers:
     - kustomize:
         patches:
