--- a/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
+++ b/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 15s
   timeout: 1m0s
-  url: https://charts.bakito.net
+  url: https://isindir.github.io/sops-secrets-operator/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -37,10 +37,6 @@ spec:
   driftDetection:
     mode: enabled
   values:
-    service:
-      port: 80
-      type: NodePort
-    deployment:
-      env:
-        sealedSecretsControllerName: sealed-secrets
-        sealedSecretsControllerNamespace: sealed-secrets
+    gpg:
+      enabled: true
+      secret1: sops-gpg
