--- a/playgrounds/sops-secrets/assets/distro/kustomization.yaml
+++ b/playgrounds/sops-secrets/assets/distro/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - sealed-secrets.flux.yaml
-  - sealed-secrets-web.flux.yaml
+  - gpg.yaml
+  - sops-secrets-operator.flux.yaml
