--- a/playgrounds/sops-secrets/assets/objects/flux/kustomization.yaml
+++ b/playgrounds/sops-secrets/assets/objects/flux/kustomization.yaml
@@ -1,12 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: sealed-secrets
-secretGenerator:
-- name: sealing-key
-  files:
-  - tls.crt
-  - tls.key
-  type: "kubernetes.io/tls"
-  options:
-    labels:
-      sealedsecrets.bitnami.com/sealed-secrets-key: active
+namespace: flux-sops
+resources:
+  - gpg.yaml
+  - repository.yaml
+  - sync.yaml
+  - rbac.yaml
+  - ns.yaml
