--- a/playgrounds/external-secrets/assets/objects/vault/store.yaml
+++ b/playgrounds/external-secrets/assets/objects/vault/store.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dev-secrets
   namespace: eso-vault
 spec:
-  refreshInterval: 15s
+  refreshInterval: 15
   provider:
     vault:
       server: "http://vault.vault.svc:8200"
