feat: udpate sops

--- a/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
+++ b/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
@@ -16,7 +16,7 @@ metadata:
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
-  interval: 1m
+  interval: 30s
   targetNamespace: sops
   releaseName: "sops-secrets-operator"
   chart:
