--- a/playgrounds/external-secrets/assets/distro/external-secrets.flux.yaml
+++ b/playgrounds/external-secrets/assets/distro/external-secrets.flux.yaml
@@ -2,30 +2,30 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name:  projectcapsule
+  name:  external-secrets
   namespace: flux-system
 spec:
   interval: 15s
   timeout: 1m0s
-  url: https://projectcapsule.github.io/charts
+  url: https://charts.external-secrets.io
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: capsule
+  name: external-secrets
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
-  interval: 15s
-  targetNamespace: capsule-system
-  releaseName: "capsule"
+  interval: 1m
+  targetNamespace: external-secrets
+  releaseName: "external-secrets"
   chart:
     spec:
-      chart: capsule
-      version: "0.7.2"
+      chart: external-secrets
+      version: "0.13.0"
       sourceRef:
         kind: HelmRepository
-        name: projectcapsule
+        name: external-secrets
       interval: 24h
   install:
     createNamespace: true
@@ -35,7 +35,7 @@ spec:
     remediation:
       remediateLastFailure: true
   driftDetection:
-    mode: disabled
+    mode: enabled
   values:
     crds:
       install: true
