--- a/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
+++ b/playgrounds/sops-secrets/assets/distro/sops-secrets-operator.flux.yaml
@@ -2,38 +2,42 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cert-manager
+  name:  sops-secrets-operator
   namespace: flux-system
 spec:
-  interval: 24h0m0s
-  url: https://charts.jetstack.io
+  interval: 15s
+  timeout: 1m0s
+  url: https://isindir.github.io/sops-secrets-operator/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cert-manager
+  name: sops-secrets-operator
   namespace: flux-system
 spec:
   serviceAccountName: kustomize-controller
-  interval: 15s
-  releaseName: "cert-manager"
-  targetNamespace: "cert-manager"
+  interval: 30s
+  targetNamespace: sops
+  releaseName: "sops-secrets-operator"
   chart:
     spec:
-      chart: cert-manager
-      version: "1.15.3"
+      chart: sops-secrets-operator
+      version: "0.20.4"
       sourceRef:
         kind: HelmRepository
-        name: cert-manager
+        name: sops-secrets-operator
       interval: 24h
   install:
     createNamespace: true
+    remediation:
+      retries: -1
   upgrade:
     remediation:
       remediateLastFailure: true
-      retries: -1
   driftDetection:
     mode: enabled
   values:
-    crds:
+    gpg:
       enabled: true
+      secret1: sops-gpg
+      secret2: sops-gpg
