feat: prepare playground

--- a/playgrounds/capsule/assets/distro/dashboard.flux.yaml
+++ b/playgrounds/capsule/assets/distro/dashboard.flux.yaml
@@ -36,6 +36,7 @@ spec:
     - --skip-provider-button=true
     - --pass-user-headers=true
     - --skip-auth-route="/api/health"
+    - --htpasswd-user-group="projectcapsule.dev"
     ingress:
       enabled: false
     livenessProbe:
