--- a/playgrounds/capsule/assets/distro/capsule.flux.yaml
+++ b/playgrounds/capsule/assets/distro/capsule.flux.yaml
@@ -37,6 +37,14 @@ spec:
   driftDetection:
     mode: disabled
   values:
+    proxy:
+      enabled: true
+      certManager:
+        generateCertificates: true
+      options:
+        extraArgs:
+          - "--feature-gates=ProxyClusterScoped=true"
+          - "--feature-gates=ProxyAllNamespaced=true"
     crds:
       install: true
     tls:
@@ -49,40 +57,3 @@ spec:
         capsuleUserGroups:
         - "projectcapsule.dev"
         forceTenantPrefix: false
----
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
-metadata:
-  name: capsule-proxy
-  namespace: flux-system
-spec:
-  dependsOn:
-    - capsule
-  serviceAccountName: kustomize-controller
-  interval: 15s
-  targetNamespace: capsule-system
-  releaseName: "capsule-proxy"
-  chart:
-    spec:
-      chart: capsule-proxy
-      version: "0.9.1"
-      sourceRef:
-        kind: HelmRepository
-        name: projectcapsule
-      interval: 24h
-  install:
-    createNamespace: true
-    remediation:
-      retries: -1
-  upgrade:
-    remediation:
-      remediateLastFailure: true
-  driftDetection:
-    mode: disabled
-  values:
-    certManager:
-      generateCertificates: true
-    options:
-      extraArgs:
-        - "--feature-gates=ProxyClusterScoped=true"
-        - "--feature-gates=ProxyAllNamespaced=true"
