--- a/playgrounds/capsule/assets/distro/capsule.flux.yaml
+++ b/playgrounds/capsule/assets/distro/capsule.flux.yaml
@@ -22,11 +22,7 @@ spec:
   chart:
     spec:
       chart: capsule
-<<<<<<< HEAD
       version: "0.7.4"
-=======
-      version: "0.7.2"
->>>>>>> 617fc69ff3d33bc01fb139b28642a0c5e6fdfcb9
       sourceRef:
         kind: HelmRepository
         name: projectcapsule
@@ -41,17 +37,18 @@ spec:
   driftDetection:
     mode: disabled
   values:
-<<<<<<< HEAD
     proxy:
       enabled: true
       certManager:
         generateCertificates: true
+      service:
+        type: NodePort
+        nodePort: 30443
       options:
+        generateCertificates: false
         extraArgs:
           - "--feature-gates=ProxyClusterScoped=true"
           - "--feature-gates=ProxyAllNamespaced=true"
-=======
->>>>>>> 617fc69ff3d33bc01fb139b28642a0c5e6fdfcb9
     crds:
       install: true
     tls:
@@ -62,10 +59,5 @@ spec:
     manager:
       options:
         capsuleUserGroups:
-<<<<<<< HEAD
         - "projectcapsule.dev"
         forceTenantPrefix: false
-=======
-        - "system:serviceaccounts:capsule-argo-addon"
-        forceTenantPrefix: false
->>>>>>> 617fc69ff3d33bc01fb139b28642a0c5e6fdfcb9
