--- a/playgrounds/capsule/assets/distro/dashboard.flux.yaml
+++ b/playgrounds/capsule/assets/distro/dashboard.flux.yaml
@@ -5,6 +5,7 @@ metadata:
   name: oauth2-proxy
   namespace: flux-system
 spec:
+  serviceAccountName: kustomize-controller
   interval: 1m
   timeout: 10m
   targetNamespace: capsule-systen
