fix: improve usage

--- a/playgrounds/gitops/assets/distro/argo.flux.yaml
+++ b/playgrounds/gitops/assets/distro/argo.flux.yaml
@@ -4,6 +4,7 @@ kind: HelmRelease
 metadata:
   name: argocd
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   targetNamespace: argocd
   releaseName: "argocd"
