--- a/playgrounds/gitops/assets/distro/argo.flux.yaml
+++ b/playgrounds/gitops/assets/distro/argo.flux.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name:  argo
+spec:
+  interval: 1m0s
+  timeout: 1m0s
+  url: https://argoproj.github.io/argo-helm
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
