--- a/playgrounds/capsule/assets/distro/capsule.flux.yaml
+++ b/playgrounds/capsule/assets/distro/capsule.flux.yaml
@@ -1,13 +1,16 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name:  projectcapsule
-  namespace: flux-system
+  name: capsule
 spec:
-  interval: 15s
-  timeout: 1m0s
-  url: https://projectcapsule.github.io/charts
+  interval: 10m
+  layerSelector:
+    mediaType: "application/vnd.cncf.helm.chart.content.v1.tar+gzip"
+    operation: copy
+  url: oci://ghcr.io/projectcapsule/charts/capsule
+  ref:
+    tag: 0.7.4
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -19,14 +22,9 @@ spec:
   interval: 15s
   targetNamespace: capsule-system
   releaseName: "capsule"
-  chart:
-    spec:
-      chart: capsule
-      version: "0.7.4"
-      sourceRef:
-        kind: HelmRepository
-        name: projectcapsule
-      interval: 24h
+  chartRef:
+    kind: OCIRepository
+    name: capsule
   install:
     createNamespace: true
     remediation:
@@ -41,6 +39,11 @@ spec:
       enabled: true
       certManager:
         generateCertificates: true
+        certificate:
+          ipAddresses:
+          - 127.0.0.1
+          dnsNames:
+          - localhost
       service:
         type: NodePort
         nodePort: 30443
