--- a/playgrounds/gitops/assets/distro/argo.flux.yaml
+++ b/playgrounds/gitops/assets/distro/argo.flux.yaml
@@ -1,16 +1,26 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name:  argo
+spec:
+  interval: 1m0s
+  timeout: 1m0s
+  url: https://argoproj.github.io/argo-helm
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: argocd
 spec:
+  serviceAccountName: kustomize-controller
   interval: 30s
   targetNamespace: argocd
   releaseName: "argocd"
   chart:
     spec:
       chart: argo-cd
-      version: "7.7.18"
+      version: "7.8.5"
       sourceRef:
         kind: HelmRepository
         name: argo
