--- a/playgrounds/trivy/assets/distro/trivy.flux.yaml
+++ b/playgrounds/trivy/assets/distro/trivy.flux.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: trivy-operator
@@ -8,7 +8,7 @@ spec:
   interval: 24h0m0s
   url: https://aquasecurity.github.io/helm-charts/
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: trivy-operator
